--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "alpaca-py>=0.42.1",
+    "arrow>=1.3.0",
+    "pandas>=2.3.2",
+    "python-dotenv>=1.1.1",
     "pyyaml>=6.0.2",
 ]
