--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.2",
+    "scipy>=1.16.1",
     "ta-lib>=0.6.6",
 ]
