--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alpaca-py>=0.42.1",
     "arrow>=1.3.0",
     "backtesting>=0.6.5",
+    "hydra-core>=1.3.2",
     "loguru>=0.7.3",
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
