--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ dependencies = [
     "arrow>=1.3.0",
     "backtesting>=0.6.5",
     "hydra-core>=1.3.2",
+    "logbook>=1.8.2",
     "loguru>=0.7.3",
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.2",
+    "rich>=14.1.0",
     "scipy>=1.16.1",
     "ta-lib>=0.6.6",
 ]
