--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.2",
+    "redis>=5.0.1",
     "rich>=14.1.0",
     "scipy>=1.16.2",
     "ta-lib>=0.6.7",
