--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "alpaca-py>=0.42.1",
     "arrow>=1.3.0",
+    "colorama>=0.4.6",
     "logbook>=1.8.2",
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
